# pico_audio_test

./: .gitignore  CMakeLists.txt  packages.json  sine_interp.m  sine_wave.m  test.c
.cache/clangd/index/: app.cpp.570703DE90B5CAAC.idx  app.hpp.3D5638B1533904C2.idx  argument_helpers.cpp.901F0CDF2551AB9E.idx  argument_helpers.hpp.EEB45055123558F2.idx  dac.cpp.98E1A174AF2C4FA7.idx  dac.hpp.768A0AAB8BFA9A94.idx  fatfs_glue.cpp.2EE57472DB2B7A3C.idx  file_io.cpp.5E9356CCC1531EB8.idx  main.cpp.9F3664C74531F367.idx  mmc.cpp.D573E430BAE3D4DC.idx  mmc.hpp.C3EF64390B575B9E.idx  mmc_spi.cpp.EB61046464351E1E.idx  mmc_spi.hpp.D4B2130A6030344B.idx  sine_command.cpp.F4E0A87667FEE916.idx  sine_command.hpp.C9805C93289BD5F1.idx
src/: CMakeLists.txt  main.cpp
src/arch/: CMakeLists.txt
src/arch/rp2040/: CMakeLists.txt  fatfs_glue.cpp  file_io.cpp
src/arch/rp2040/mmc/: CMakeLists.txt  mmc_spi.cpp  mmc_spi.pio
src/arch/rp2040/mmc/include/arch/rp2040/mmc/: mmc.hpp  mmc_commands.hpp  mmc_spi.hpp
src/dac/: CMakeLists.txt  dac.cpp
src/dac/include/dac/: dac.hpp
src/ui/: CMakeLists.txt  app.cpp  argument_helpers.cpp  argument_helpers.hpp  sine_command.cpp  sine_command.hpp
src/ui/include/ui/: app.hpp
